VCST-3153: Add SQL queries functionality (#4)

--- a/src/VirtoCommerce.SqlQueries.Web/Localizations/en.VirtoCommerce.SqlQueries.json
+++ b/src/VirtoCommerce.SqlQueries.Web/Localizations/en.VirtoCommerce.SqlQueries.json
@@ -1,7 +1,54 @@
 {
-  "SqlQueries": {
+  "sql-queries": {
+    "title": "SQL Queries",
     "blades": {
-
+      "sql-query-list": {
+        "title": "SQL queries",
+        "labels": {
+          "name": "Name"
+        }
+      },
+      "sql-query-details": {
+        "title": "Query details",
+        "title-add": "New query",
+        "labels": {
+          "name": "Name",
+          "connection-string-name": "Connection string name",
+          "database-provider": "Database provider",
+          "description": "Description",
+          "parameters": "Parameters",
+          "parameter-name": "Name",
+          "parameter-type": "Type",
+          "query": "Query text"
+        },
+        "placeholders": {
+          "name": "Enter query name",
+          "connection-string-name": "Select connection string name",
+          "description": "Enter query description",
+          "parameter-name": "Enter parameter name",
+          "parameter-type": "Select parameter type",
+          "query": "Enter query text"
+        },
+        "messages": {
+          "saveSuccess": "Sql query saved successfully.",
+          "deleteSuccess": "Sql query deleted successfully."
+        }
+      },
+      "report-execution": {
+        "title": "Report execution",
+        "labels": {
+          "format": "Format",
+          "name": "Name",
+          "description": "Description"
+        },
+        "placeholders": {
+          "format": "Select format"
+        }
+      }
+    },
+    "commands": {
+      "add-parameter": "Add parameter",
+      "try-query": "Try query"
     }
   },
   "permissions": {
@@ -9,6 +56,7 @@
     "sql-queries:create": "Create SqlQueries related data",
     "sql-queries:read": "View SqlQueries related data",
     "sql-queries:update": "Update SqlQueries related data",
-    "sql-queries:delete": "Delete SqlQueries related data"
+    "sql-queries:delete": "Delete SqlQueries related data",
+    "sql-queries:reports": "Execute and access reports"
   }
 }
